# cs330-examples

./: .clang-format  .gitignore  CPPLINT.cfg  README.md  ReviewSessions.md  Reviews330.md  check-style-cpp.sh  check-style-java.sh  checkstyle.xml  deploy-all.py  deploy-all.sh  headings.json
01-Java-Linked-Lists/: README.md
02-Java-Well-Defined-Interfaces/: README.md
03-Java-Separation-of-Concerns/: README.md
03-Rust-Separation-of-Concerns/: README.md
04-Java-Unit-Testing/: README.md
04-Python-Unit-Testing/: README.md
04-Rust-Unit-Testing/: README.md
05-UML-1-Class-Diagrams/: README.md
05-UML-2-Sequence-Diagrams/: README.md
06-Java-Shapes/: README.md
06-Python-Shapes/: README.md
06-Python-Shapes/Example-2/: pyproject.toml
06-Python-Shapes/Example-2/shapes/: ShapeFactory.py  Triangle.py
06-Rust-Shapes/: README.md
06-Rust-Shapes/Example-9/: Cargo.toml
06-Rust-Shapes/Example-9/benches/: bench_factory.rs  bench_parser.rs
06-Rust-Shapes/Example-9/src/: circle.rs  equilateral_triangle.rs  factory.rs  right_triangle.rs  square.rs  triangle.rs
06-Rust-Shapes/Example-9/tests/: test_factory.rs  test_parser.rs
09-Java-Basic-GUI/: README.md
10-GuiThread/: README.md
11-Python-Threads/: README.md
11-Rust-Threads/: README.md
12-Java-Streams-Fibonacci/: README.md
12-Python-Generators-Fibonacci/: README.md
12-Rust-Iterators-Fibonacci/: README.md
13-CPP-Iterators-Words/: README.md
13-Java-Streams-Words/: README.md
13-Python-Generators-Words/: README.md
13-Rust-Iterators-Words/: README.md
14-Python-Builder-Pattern/: README.md
14-Python-Builder-Pattern/Example-4/: pyproject.toml  update_room.py
14-Python-Builder-Pattern/Example-4/renovation/: house.py  room.py
14-Rust-Builder-Pattern/: README.md
14-Rust-Builder-Pattern/Example-7/: Cargo.toml  room_data.txt
14-Rust-Builder-Pattern/Example-7/src/: builder_utils.rs  error.rs  flooring.rs  house.rs  io.rs  lib.rs  room.rs
14-Rust-Builder-Pattern/Example-7/tests/: test_flooring_builder.rs  test_house_builder.rs  test_room_builder.rs
15-Python-Strategy-Pattern/: README.md
15-Python-Strategy-Pattern/Example-3/: pyproject.toml
15-Python-Strategy-Pattern/Example-3/tests/: __init__.py
15-Python-Strategy-Pattern/Example-3/tests/tictactoe/: test_game.py  test_player.py
15-Python-Strategy-Pattern/Example-3/tictactoe/: board.py  builders.py
15-Python-Strategy-Pattern/Example-7/: .pylintrc  pyproject.toml
15-Python-Strategy-Pattern/Example-7/tests/tictactoe/: test_game.py  test_player.py
15-Python-Strategy-Pattern/Example-7/tictactoe/: game.py
99-Lecture-Snippets/: README.md  todo.md
Review-00-CPP-Head-to-Head-Testing/: .gitignore
Review-00-Foundational-Concepts/: README.md
Review-01/: deploy.sh
Review-01-CPP-Linked-Lists/: README.md
Review-01-CPP-Templated-Linked-Lists/: README.md
Review-01-Java-Linked-Lists/: README.md
Review-01-Linked-Lists/: README.md
Review-01-Python-Linked-Lists/: README.md
Review-02/: Example1.txt
Review-02-Java-Well-Defined-Interfaces/: README.md
Review-02-Well-Defined-Interfaces/: README.md  ex7-out.txt  ex8-out.txt
Review-03-CPP-Separation-of-Concerns/: README.md
Review-03-Java-Separation-of-Concerns/: README.md
Review-03-Python-Separation-of-Concerns/: README.md
Review-03-Separation-of-Concerns/: README.md
Review-04/: .gitignore  Diagram1.dia  Diagram2.dia  README.md  deploy.sh
Review-04-Design/: README.md
Review-04-Design-1/: README.md
Review-04-Design-2/: README.md
Review-04-Design-3/: README.md
Review-04-Design-4/: README.md
Review-06-CPP-Shapes/: README.md
Review-06-Java-Shapes/: README.md
Review-06-Python-Shapes/: README.md
Review-06-Rust-Shapes/: README.md
Review-07-Comparing-Languages/: README.md
Review-07-Java-Toys/: deploy.sh
Review-07-Switching-to-Java/: README.md
Review-08-Java-Shapes/: deploy.sh
Review-08-UML-Sequence-Diagrams/: README.md  deploy.sh
Review-09-GuiThread/: deploy.sh
Review-09-Java-Shapes/: README-lecture.md  README.md
Review-10-GuiThread/: README.md
Review-10-Python3-Shapes/: .gitignore  deploy.sh
Review-10-Threads/: deploy.sh
Review-11-Rust-Threads/: Cargo.toml
Review-11-Rust-Threads/Example-3/: Cargo.toml  Simulate.java  simulate.py
Review-11-Rust-Threads/Example-3/coin_flip/: Cargo.toml
Review-11-Rust-Threads/Example-3/coin_flip/benches/: strong_scaling.rs
Review-11-Rust-Threads/Example-3/coin_flip/src/: flip_task.rs  lib.rs
Review-11-Rust-Threads/Example-3/coin_flip_py/: Cargo.toml
Review-11-Rust-Threads/Example-3/coin_flip_rs/: Cargo.toml
Review-11-Rust-Threads/Example-3/src/: lib.rs
Review-14-Rust-Builder-Pattern/Example-2/: Cargo.toml  tarpaulin-report.html
Review-14-Rust-Builder-Pattern/Example-2/src/: error.rs  flooring.rs  house.rs  io.rs  main.rs  room.rs
Review-14-Rust-Builder-Pattern/Example-2/tests/: test_flooring_builder.rs  test_house_builder.rs  test_io.rs  test_room_builder.rs
Review-14-Rust-Builder-Pattern/Example-4/: Cargo.toml
Review-14-Rust-Builder-Pattern/Example-4/src/: error.rs  house.rs  io.rs  main.rs  room.rs
Review-14-Rust-Builder-Pattern/Example-4/tests/: test_io.rs  test_room_builder.rs
(+2100 files in other folders)
