[package]
name = "room_renovation"
version = "0.1.0"
authors = ["Thomas J. Kennedy <tkennedy@cs.odu.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.0"
itertools = "*"
typed-builder = "0.18.1"
thiserror = "2.0.0"
eyre = "0.6.12"

[dev-dependencies]
hamcrest2 = "*"
rstest = "0.25.0"
stringreader = "0.1.1"

