[project]
name = "CS 330 Tic-Tac-Toe"
version = "1.0"
description = "Python Tic-Tac-Toe Example"
authors = {name = "Thomas J. Kennedy", email="tkennedy@cs.odu.edu"}

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["D101", "E", "W", "F", "B", "Q", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
