[package]
name = "coin-flip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="coin_flip"
crate-type = ["cdylib"]

[dependencies]
num-format = "0.4.4"
rand = { version = "0.9.0-alpha.1", features = ["small_rng"] }
robusta_jni = "0.2.2"
